# AUT-minirobot

./: .gitignore
dynamixel/: Readme.md
dynamixel/dynamixel_controllers/src/dynamixel_controllers/: joint_controller.py  joint_position_controller.py
dynamixel/dynamixel_driver/src/dynamixel_driver/: dynamixel_io.py  dynamixel_serial_proxy.py
dynamixel/dynamixel_tutorials/config/: dynamixel_joint_controllers.yaml
dynamixel/dynamixel_tutorials/launch/: controller_manager.launch  controller_spawner.launch
extras/: record.sh
minirobot/: CMakeLists.txt  Readme.md  TODO  package.xml
minirobot/launch/: core.launch
minirobot/src/: minirobot.cpp
minirobot_msgs/: CMakeLists.txt  package.xml
minirobot_msgs/action/: avoidThat.action  avoidthataction.action  gesture.action  grip.action  grip_emergency.action  grip_party.action  object.action  object_emergency.action  object_party.action  sepanta.action  slamaction.action
minirobot_msgs/msg/: arm.msg  coordinate.msg  head.msg  irsensor.msg  joint.msg  motortorques.msg  omnidata.msg  position_cocktail.msg  user.msg  users.msg
minirobot_msgs/srv/: command.srv  follow.srv  maptools.srv  stop.srv
rqt_plugin/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_plugin/include/rqt_camera_calib_gui/: CameraCalibView.h  ratio_layouted_frame.h
rqt_plugin/resources/: camera_calib_view.ui
rqt_plugin/scripts/: rqt_camera_calib_gui
rqt_plugin/src/rqt_camera_calib_gui/: CameraCalibView.cpp  ratio_layouted_frame.cpp
